k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: margwa
  labels:
    name: margwa
    environment: production
